--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Menu.Menu
 EditorStartupMap=/Game/Maps/Menu.Menu
-GlobalDefaultGameMode=/Game/Blueprints/BP_GameModeMenuBase.BP_GameModeMenuBase_C
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/Menu.Menu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/Game/BP_GameModeMenuBase.BP_GameModeMenuBase_C
+GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
